test/visibility/only/onlyOuterModule.good
onlyOuterModule.chpl:8: In function 'main':
onlyOuterModule.chpl:9: error: cannot use 'only' clause with symbol 'Outer' as it is not defined in 'Toolbox'
